k8s/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
    - name: mysql
      image: mysql:8
      ports:
        - name: dbport
          containerPort: 3306
          protocol: TCP
