k8s/petclinic-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: petclinic-deploy
spec:
  # 3 Pods should exist at all times.
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: petclinic
    spec:
      containers:
      - name: petclinic
        # Run this image
        image: shaikkhajaibrahim/workshop-petclinic
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
          requests: 
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
