k8s/test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: petclinic
  labels:
    # Apply this label to pods and default
    # the Deployment label selector to this value
    app: petclinic
spec:
  containers:
  - name: petclinic
    # Run this image
    image: shaikkhajaibrahim/workshop-petclinic
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 3
    readinessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 3
