k8s/petclinic-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
