k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /clinic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: petclinic-svc
            port:
              number: 8080
      - path: /commerce(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: petcommerce-svc
            port:
              number: 80
